Version 1.9.3 - unreleased
Bible Navigator
UTF-8 for bibles and communications
Option to turn off auditing on individual songs

Version 1.9.2 - 17/03/2005
Moved media to DB
Moved all lds dirs to lyricue (ie /usr/share/lds is now /usr/share/lyricue
Debian packaging
Add/Rename/Delete items in mediaDb
Fast non-canvas server
Gnomecanvas, Gtk2-spell and gettext now all optional
New utility lyricue-remote
Support for bibles from Sword project

Version 1.9.1 - 11/08/2004
Preview working
Preview/miniview built into interface
Fix double-clicking spell-check
Fix double-clicking bg directory buttons
If Background is set for song-header it is applied to all pages
Re-design playlist so transitions/backgrounds listed as sub-items
What was expanded, stays expanded after playlist refresh
Solid colours can be made by creating an empty file named <colour>.bg where <colour> is any valid x-colour name
Speedups in interface due to simpler scaling
Sublists working once again
Supports latin-extended characters (ie german chars)

Version 1.9 - 2/05/2004
* RENAMED LYRICUE *
GTK2/Glade2 based
Server based on gnomecanvas2
Graphical error reporting
Re-wrote install script (now also handles upgrades)
Spellchecking
Screen transitions
Text Shadow
User access controls

Version 1.2 - 25/03/2003
Changed format of playlist to handle sub-playlists
Add copyright info for songs, includes presets
Can allow song to loop by sending display:next_page:loop
Added capability to tell server to jump to a particular page number in song
Bugfix: preview works again
Multiple Playlists!
Can duplicate/delete pages in a playlist
Mozilla version of server (experimental)
Supports (sort-of) Xinerama
Preferences dialog (replaces preferences menu items)
Can tell interface to connect to remote server

Version 1.1.1 - 7/11/2002
Bugfix for clicking background
Bugfix for forgotten period in server

Version 1.1 - 26/09/2002
Playlist can be re-ordered