@@ -1,4 +1,5 @@
-This package was written by Tobias Gehrig tobias@THINKPAD-R32 on Sun, 27 Jun 2004 23:39:48 +0200.
+This package was written by Chris Debenham chris@adebenham.com on Wed, 27 Jul
+2005 15:59:18 +1000.
 
 Copyright: GPL (see /usr/share/common-licenses/GPL)
 
