@@ -10,4 +10,4 @@ usr/share/locale
 usr/share/locale/de
 usr/share/locale/en_GB
 usr/share/locale/en_US
-usr/share/application
+usr/share/applications
