@@ -1,12 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Version=1.0
-Type=Application
-Exec=/usr/bin/lyricue
-TryExec=
-Icon=/usr/share/lyricue/lyricue-icon.png
-X-GNOME-DocPath=
-Terminal=false
-Name=Lyricue
-GenericName=
-Comment=The GNU Lyric Display System
