@@ -1,0 +1,10 @@
+.TH IMPORT_MEDIA 1
+.SH NAME
+import_media \- Mass import media into lyricue
+.SH SYNOPSIS
+.B import_media
+.RB "<img|bg> <directory>"
+.SH AUTHOR
+Chris Debenham <chris@adebenham.com>
+.SH COPYRIGHT
+This program is released under the GPL (http://www.gnu.org/copyleft/gpl.html)
