@@ -1,0 +1,10 @@
+.TH LYRICUE_REMOTE 1
+.SH NAME
+lyricue_remote \- Remote control of lyricue
+.SH SYNOPSIS
+.B lyricue
+.RB "[command] [option1] [option1]
+.SH AUTHOR
+Chris Debenham <chris@adebenham.com>
+.SH COPYRIGHT
+This program is released under the GPL (http://www.gnu.org/copyleft/gpl.html)
