@@ -1,14 +1,17 @@
-
 [Desktop Entry]
-Name=Lyricue Server
-Comment=Lyric Display System Server
-Exec=lyricue_server
-Icon=/usr/share/lyricue/lyricue-icon.png
-Terminal=false
-MultipleArgs=false
+Encoding=UTF-8
+Version=1.0
 Type=Application
+Exec=/usr/bin/lyricue_server
+TryExec=
+Icon=/usr/share/lyricue/lyricue-icon.png
+X-GNOME-DocPath=
+Terminal=false
+Name=Lyricue Server
+GenericName=
+Comment=The GNU Lyric Display System Server
+MultipleArgs=false
 Categories=Application;Utility;X-Red-Hat-Extra;
 StartupNotify=true
 Encoding=UTF-8
 X-Desktop-File-Install-Version=0.3
-
