@@ -8,7 +8,7 @@ rm -rf dist/lyricue*
 
 echo Copying new dist files
 mkdir dist/lyricue-$VERSION
-cp images/black.png import_media install images/lyricue.png images/lyricue-icon.png lyricue.glade lyricue lyricue_server lyricue_remote access.conf default.conf dist/lyricue-$VERSION
+cp *.1 *.desktop images/black.png import_media install images/lyricue.png images/lyricue-icon.png lyricue.glade lyricue lyricue_server lyricue_remote access.conf default.conf dist/lyricue-$VERSION
 
 for F in black white gray red green blue yellow orange;do touch dist/lyricue-$VERSION/$F.bg;done
 
@@ -36,7 +36,7 @@ echo Creating lyricue-upgrade-$VERSION.tar.bz2
 tar cf - lyricue-$VERSION | bzip2 -c > lyricue-upgrade-$VERSION.tar.bz2
 cd ..
 rm -rf dist/lyricue-$VERSION
-rm dist/*.dsc dist/*.changes
-cp dist/*deb /var/www/debian
+cp dist/*deb dist/*.dsc dist/*.gz  /var/www/debian
 cd /var/www/debian
 dpkg-scanpackages . /dev/null | gzip -c > Packages.gz
+dpkg-scansources . /dev/null | gzip -c > Sources.gz
