@@ -2,6 +2,8 @@ Version 1.9.3 - unreleased
 Bible Navigator
 UTF-8 for bibles and communications
 Option to turn off auditing on individual songs
+Option to specify first item in available songlist
+Option for first category shown in images/background lists
 
 Version 1.9.2 - 17/03/2005
 Moved media to DB
